--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pydantic",
     "python-dotenv",
     "langchain",
+    "langchain-openai",
     "langgraph",
     "openai",
 ]
